# limepy

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  limepy.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  description.rst  description.rst~  index.rst  installation.rst  make.bat  usage.rst  usage_examples.rst~  usageexamples.rst  usageexamples.rst~
docs/_build/doctrees/: authors.doctree  contributing.doctree  description.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree  usageexamples.doctree
docs/_build/doctrees/references/: limepy.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  description.html  genindex.html  history.html  index.html  installation.html  objects.inv  readme.html  search.html  searchindex.js  usage.html  usageexamples.html
docs/_build/html/_modules/: dflab.html  index.html
docs/_build/html/_sources/: description.txt  index.txt  usageexamples.txt
docs/_build/html/references/: limepy.html
docs/references/: limepy.rst
limepy/: __init__.py  flowchart_rotation.txt  limepy.py  sample.py  spes.py
notebooks/: 00_kingmodel.ipynb  01_sample_and_fit.ipynb  02_varying_truncation_parameter_g.ipynb  03_three_component_model.ipynb  04_anisotropy.ipynb  05_compare_limepy_plummer.ipynb  limepy
src/: __init__.py  limepy.py
tests/: test_limepy.py
